--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <!-- Product Item: Tシャツ -->
                 <div class="product-card-preview p-6 text-center">
-                    <img src="IMG_2968.jpg" alt="Tシャツ" class="w-full h-auto object-contain rounded-md mb-4">
+                    <img src="IMG_2968 2.PNG" alt="Tシャツ" class="w-full h-auto object-contain rounded-md mb-4">
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">Tシャツ</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥3,500<span class="text-lg text-gray-300">〜</span></p>
                     <p class="text-gray-300 text-sm mb-4">
