--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
     </section>
 
     <!-- Product Preview Section (PICK UP ITEM) -->
-    <section class="py-16 bg-zinc-900"> <!-- 背景色を黒に変更 -->
+    <section class="py-10 bg-zinc-900"> <!-- 背景色を黒に変更, py-16をpy-10に変更 -->
         <div class="max-w-7xl mx-auto px-4">
             <h2 class="text-4xl md:text-5xl font-bold text-center mb-12 text-orange-500">PICK UP ITEM</h2>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Product Item: ユニフォーム -->
-                <div class="product-card-preview p-6 text-center">
-                    <img src="IMG_2978 2.PNG" alt="ユニフォーム" class="w-full h-auto object-contain rounded-md mb-4">
+                <div class="product-card-preview p-4 text-center"> <!-- p-6をp-4に変更 -->
+                    <img src="IMG_2978 2.jpg" alt="ユニフォーム" class="w-5/6 h-auto object-contain rounded-md mb-2 mx-auto"> <!-- w-fullをw-5/6に、mb-4をmb-2に、mx-autoを追加 -->
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">ユニフォーム</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥7,000<span class="text-lg text-gray-300">〜</span></p>
                     <p class="text-gray-300 text-sm mb-4">
@@ -133,8 +133,8 @@
                 </div>
 
                 <!-- Product Item: リバーシブルセット -->
-                <div class="product-card-preview p-6 text-center">
-                    <img src="IMG_2977 2.PNG" alt="リバーシブルセット" class="w-full h-auto object-contain rounded-md mb-4">
+                <div class="product-card-preview p-4 text-center"> <!-- p-6をp-4に変更 -->
+                    <img src="IMG_2977 2.jpg" alt="リバーシブルセット" class="w-5/6 h-auto object-contain rounded-md mb-2 mx-auto"> <!-- w-fullをw-5/6に、mb-4をmb-2に、mx-autoを追加 -->
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">リバーシブルセット</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥7,500<span class="text-lg text-gray-300">〜</span></p>
                     <p class="text-gray-300 text-sm mb-4">
@@ -146,8 +146,8 @@
                 </div>
 
                 <!-- Product Item: Tシャツ -->
-                <div class="product-card-preview p-6 text-center">
-                    <img src="IMG_2968 2.PNG" alt="Tシャツ" class="w-full h-auto object-contain rounded-md mb-4">
+                <div class="product-card-preview p-4 text-center"> <!-- p-6をp-4に変更 -->
+                    <img src="IMG_2968 2.PNG" alt="Tシャツ" class="w-5/6 h-auto object-contain rounded-md mb-2 mx-auto"> <!-- w-fullをw-5/6に、mb-4をmb-2に、mx-autoを追加 -->
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">Tシャツ</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥3,500<span class="text-lg text-gray-300">〜</span></p>
                     <p class="text-gray-300 text-sm mb-4">
