--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Product Item: ユニフォーム -->
                 <div class="product-card-preview p-4 text-center"> <!-- p-6をp-4に変更 -->
-                    <img src="IMG_2978 2.jpg" alt="ユニフォーム" class="w-5/6 h-auto max-h-64 object-contain rounded-md mb-2 mx-auto"> <!-- w-fullをw-5/6に、mb-4をmb-2に、mx-autoを追加, max-h-64を追加 -->
+                    <img src="IMG_2978 2.PNG" alt="ユニフォーム" class="w-5/6 h-auto max-h-64 object-contain rounded-md mb-2 mx-auto"> <!-- w-fullをw-5/6に、mb-4をmb-2に、mx-autoを追加, max-h-64を追加 -->
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">ユニフォーム</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥7,000<span class="text-lg text-gray-300">〜</span></p>
                     <p class="text-gray-300 text-sm mb-4">
@@ -134,7 +134,7 @@
 
                 <!-- Product Item: リバーシブルセット -->
                 <div class="product-card-preview p-4 text-center"> <!-- p-6をp-4に変更 -->
-                    <img src="IMG_2977 2.jpg" alt="リバーシブルセット" class="w-5/6 h-auto max-h-64 object-contain rounded-md mb-2 mx-auto"> <!-- w-fullをw-5/6に、mb-4をmb-2に、mx-autoを追加, max-h-64を追加 -->
+                    <img src="IMG_2977 2.PNG" alt="リバーシブルセット" class="w-5/6 h-auto max-h-64 object-contain rounded-md mb-2 mx-auto"> <!-- w-fullをw-5/6に、mb-4をmb-2に、mx-autoを追加, max-h-64を追加 -->
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">リバーシブルセット</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥7,500<span class="text-lg text-gray-300">〜</span></p>
                     <p class="text-gray-300 text-sm mb-4">
