--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Product Item: ユニフォーム -->
                 <div class="product-card-preview p-4 text-center"> <!-- p-6をp-4に変更 -->
-                    <img src="IMG_2978 2.PNG" alt="ユニフォーム" class="w-full h-auto object-contain rounded-md mb-2 mx-auto"> <!-- w-5/6からw-fullに変更, max-h-64を削除 -->
+                    <a href="all-product.html"> <!-- 画像をアクティブにするためのリンク -->
+                        <img src="IMG_2978 2.png" alt="ユニフォーム" class="w-full h-auto object-contain rounded-md mb-2 mx-auto">
+                    </a>
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">ユニフォーム</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥7,000<span class="text-lg text-gray-300">〜</span></p>
                     <p class="text-gray-300 text-sm mb-4">
@@ -134,7 +136,9 @@
 
                 <!-- Product Item: リバーシブルセット -->
                 <div class="product-card-preview p-4 text-center"> <!-- p-6をp-4に変更 -->
-                    <img src="IMG_2977 2.PNG" alt="リバーシブルセット" class="w-full h-auto object-contain rounded-md mb-2 mx-auto"> <!-- max-h-64を削除 -->
+                    <a href="all-product.html"> <!-- 画像をアクティブにするためのリンク -->
+                        <img src="IMG_2977 2.png" alt="リバーシブルセット" class="w-full h-auto object-contain rounded-md mb-2 mx-auto">
+                    </a>
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">リバーシブルセット</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥7,500<span class="text-lg text-gray-300">〜</span></p>
                     <p class="text-gray-300 text-sm mb-4">
@@ -147,7 +151,9 @@
 
                 <!-- Product Item: Tシャツ -->
                 <div class="product-card-preview p-4 text-center"> <!-- p-6をp-4に変更 -->
-                    <img src="IMG_2968 2.PNG" alt="Tシャツ" class="w-full h-auto object-contain rounded-md mb-2 mx-auto"> <!-- max-h-64を削除 -->
+                    <a href="all-product.html"> <!-- 画像をアクティブにするためのリンク -->
+                        <img src="IMG_2968 2.PNG" alt="Tシャツ" class="w-full h-auto object-contain rounded-md mb-2 mx-auto">
+                    </a>
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">Tシャツ</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥3,500<span class="text-lg text-gray-300">〜</span></p>
                     <p class="text-gray-300 text-sm mb-4">
@@ -169,11 +175,25 @@
     <!-- HOW TO ORDER Section -->
     <section id="how-to-order" class="relative w-full py-20 bg-cover bg-center" style="background-image: url('https://placehold.co/1920x600/555555/FFFFFF?text=How+To+Order+Banner');">
         <div class="absolute inset-0 bg-black opacity-50"></div>
-        <div class="relative z-10 max-w-4xl mx-auto px-4">
+        <div class="relative z-10 max-w-4xl mx-auto px-4 text-center"> <!-- text-centerを追加 -->
             <h2 class="text-4xl md:text-5xl font-bold mb-4 text-orange-500">HOW TO ORDER</h2>
             <p class="text-lg md:text-xl mb-8">カスタムスポーツウェアの注文方法についてご案内します。</p>
             <a href="how-to-order.html" class="bg-orange-500 text-white px-8 py-3 rounded-full font-semibold hover:bg-orange-600 transition duration-300 inline-block">
                 注文方法を見る
+            </a>
+        </div>
+    </section>
+
+    <!-- My Logo Design Section (変更) -->
+    <section id="logo-creation" class="relative w-full py-20 bg-cover bg-center" style="background-image: url('15296fbc6040d5d72f9ca1dc622e7984.JPG');">
+        <div class="absolute inset-0 bg-black opacity-50"></div>
+        <div class="relative z-10 max-w-4xl mx-auto px-4 text-center">
+            <h2 class="text-4xl md:text-5xl font-bold mb-4 text-orange-500">My Logo Design</h2>
+            <p class="text-lg md:text-xl mb-8">
+                お客様だけのオリジナルロゴマークをプロのデザイナーが無料で作成します。
+            </p>
+            <a href="logo-creation.html" class="bg-orange-500 text-white px-8 py-3 rounded-full font-semibold hover:bg-orange-600 transition duration-300 inline-block">
+                詳細を見る
             </a>
         </div>
     </section>
