--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </section>
 
     <!-- My Logo Design Section (変更) -->
-    <section id="logo-creation" class="relative w-full py-20 bg-cover bg-center" style="background-image: url('15296fbc6040d5d72f9ca1dc622e7984.JPG');">
+    <section id="logo-creation" class="relative w-full py-20" style="background-image: url('15296fbc6040d5d72f9ca1dc622e7984.JPG'); background-size: contain; background-repeat: no-repeat; background-position: center;">
         <div class="absolute inset-0 bg-black opacity-50"></div>
         <div class="relative z-10 max-w-4xl mx-auto px-4 text-center">
             <h2 class="text-4xl md:text-5xl font-bold mb-4 text-orange-500">My Logo Design</h2>
