--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <!-- Product Item: ユニフォーム -->
                 <div class="product-card-preview p-4 text-center"> <!-- p-6をp-4に変更 -->
                     <a href="all-product.html"> <!-- 画像をアクティブにするためのリンク -->
-                        <img src="IMG_2978 2.png" alt="ユニフォーム" class="w-full h-auto object-contain rounded-md mb-2 mx-auto">
+                        <img src="IMG_2978 2.PNG" alt="ユニフォーム" class="w-full h-auto object-contain rounded-md mb-2 mx-auto">
                     </a>
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">ユニフォーム</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥7,000<span class="text-lg text-gray-300">〜</span></p>
@@ -137,7 +137,7 @@
                 <!-- Product Item: リバーシブルセット -->
                 <div class="product-card-preview p-4 text-center"> <!-- p-6をp-4に変更 -->
                     <a href="all-product.html"> <!-- 画像をアクティブにするためのリンク -->
-                        <img src="IMG_2977 2.png" alt="リバーシブルセット" class="w-full h-auto object-contain rounded-md mb-2 mx-auto">
+                        <img src="IMG_2977 2.PNG" alt="リバーシブルセット" class="w-full h-auto object-contain rounded-md mb-2 mx-auto">
                     </a>
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">リバーシブルセット</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥7,500<span class="text-lg text-gray-300">〜</span></p>
