--- a/all-product.html
+++ b/all-product.html
@@ -40,18 +40,15 @@
             <!-- BRAND LOGO link to homepage -->
             <a href="index.html" class="text-white text-lg font-bold hover:opacity-80 transition-opacity duration-300">BRAND LOGO</a>
             <div class="hidden md:flex space-x-6 text-white text-sm">
-                <a href="index.html#services" class="hover:underline">サービス</a>
-                <a href="#top" class="hover:underline">商品一覧</a> <!-- 商品一覧ページ内でのトップに戻るリンク -->
-                <a href="price-list.html" class="hover:underline">料金</a>
-                <a href="logo-creation.html" class="hover:underline">ロゴ作成</a>
-                <a href="production-process.html" class="hover:underline">制作プロセス</a>
-                <a href="gallery.html" class="hover:underline">ギャラリー</a>
-                <a href="size-chart.html" class="hover:underline">サイズ表</a>
-                <a href="index.html#contact" class="hover:underline">お問合せ</a>
+                <a href="#top" class="hover:underline">Product</a> <!-- 商品一覧ページ内でのトップに戻るリンク -->
+                <a href="how-to-order.html" class="hover:underline">Order</a>
+                <a href="logo-creation.html" class="hover:underline">My logo</a><!-- 修正: "ロゴ作成"から"My logo"に変更 -->
+                <a href="gallery.html" class="hover:underline">Collection</a><!-- 修正: "ギャラリー"から"Collection"に変更 -->
+                <a href="size-chart.html" class="hover:underline">Size Chart</a><!-- 修正: "サイズ表"から"Size Chart"に変更 -->
+                <a href="index.html#line-qr-code" class="hover:underline">Contact</a>
             </div>
             <div class="hidden md:flex space-x-4 text-white">
-                <a href="#" class="hover:underline text-sm">SEARCH</a>
-                <a href="#" class="hover:underline text-sm">CART (0)</a>
+                <!-- SEARCHとCARTを削除 -->
             </div>
             <!-- Mobile Menu Button -->
             <button id="mobile-menu-button" class="md:hidden text-white focus:outline-none">
@@ -60,17 +57,14 @@
         </nav>
         <!-- Mobile Menu (Hidden by default) -->
         <div id="mobile-menu" class="hidden md:hidden bg-gray-900 bg-opacity-90 text-white mt-4 p-4 rounded-lg">
-            <a href="index.html#services" class="block py-2 hover:bg-gray-700 rounded">サービス</a>
-            <a href="#top" class="block py-2 hover:bg-gray-700 rounded">商品一覧</a>
-            <a href="price-list.html" class="block py-2 hover:bg-gray-700 rounded">料金</a>
-            <a href="logo-creation.html" class="block py-2 hover:bg-gray-700 rounded">ロゴ作成</a>
-            <a href="production-process.html" class="block py-2 hover:bg-gray-700 rounded">制作プロセス</a>
-            <a href="gallery.html" class="block py-2 hover:bg-gray-700 rounded">ギャラリー</a>
-            <a href="size-chart.html" class="block py-2 hover:bg-gray-700 rounded">サイズ表</a>
-            <a href="index.html#contact" class="block py-2 hover:bg-gray-700 rounded">お問合せ</a>
+            <a href="#top" class="block py-2 hover:bg-gray-700 rounded">Product</a>
+            <a href="how-to-order.html" class="block py-2 hover:bg-gray-700 rounded">Order</a>
+            <a href="logo-creation.html" class="block py-2 hover:bg-gray-700 rounded">My logo</a><!-- 修正: "ロゴ作成"から"My logo"に変更 -->
+            <a href="gallery.html" class="block py-2 hover:bg-gray-700 rounded">Collection</a><!-- 修正: "ギャラリー"から"Collection"に変更 -->
+            <a href="size-chart.html" class="block py-2 hover:bg-gray-700 rounded">Size Chart</a><!-- 修正: "サイズ表"から"Size Chart"に変更 -->
+            <a href="index.html#line-qr-code" class="block py-2 hover:bg-gray-700 rounded">Contact</a>
             <hr class="my-2 border-gray-700">
-            <a href="#" class="block py-2 hover:bg-gray-700 rounded">SEARCH</a>
-            <a href="#" class="block py-2 hover:bg-gray-700 rounded">CART (0)</a>
+            <!-- SEARCHとCARTを削除 -->
         </div>
     </header>
 
