--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a href="logo-creation.html" class="hover:underline">My logo</a>
                 <a href="gallery.html" class="hover:underline">Collection</a>
                 <a href="size-chart.html" class="hover:underline">Size Chart</a>
-                <a href="#" class="hover:underline">Contact</a>
+                <a href="index.html#line-qr-code" class="hover:underline">Contact</a>
             </div>
             <div class="hidden md:flex space-x-4 text-white">
                 <!-- SEARCHとCARTを削除 -->
@@ -96,7 +96,7 @@
             <a href="logo-creation.html" class="block py-2 hover:bg-gray-700 rounded">My logo</a>
             <a href="gallery.html" class="block py-2 hover:bg-gray-700 rounded">Collection</a>
             <a href="size-chart.html" class="block py-2 hover:bg-gray-700 rounded">Size Chart</a>
-            <a href="#" class="block py-2 hover:bg-gray-700 rounded">Contact</a>
+            <a href="index.html#line-qr-code" class="block py-2 hover:bg-gray-700 rounded">Contact</a>
             <hr class="my-2 border-gray-700">
             <!-- SEARCHとCARTを削除 -->
         </div>
@@ -175,7 +175,7 @@
     <!-- HOW TO ORDER Section -->
     <section id="how-to-order" class="relative w-full py-20 bg-cover bg-center" style="background-image: url('https://placehold.co/1920x600/555555/FFFFFF?text=How+To+Order+Banner');">
         <div class="absolute inset-0 bg-black opacity-50"></div>
-        <div class="relative z-10 max-w-4xl mx-auto px-4 text-center"> <!-- text-centerを追加 -->
+        <div class="relative z-10 max-w-4xl mx-auto px-4 text-center">
             <h2 class="text-4xl md:text-5xl font-bold mb-4 text-orange-500">HOW TO ORDER</h2>
             <p class="text-lg md:text-xl mb-8">カスタムスポーツウェアの注文方法についてご案内します。</p>
             <a href="how-to-order.html" class="bg-orange-500 text-white px-8 py-3 rounded-full font-semibold hover:bg-orange-600 transition duration-300 inline-block">
@@ -184,7 +184,7 @@
         </div>
     </section>
 
-    <!-- My Logo Design Section (変更) -->
+    <!-- My Logo Design Section -->
     <section id="logo-creation" class="relative w-full py-20" style="background-image: url('15296fbc6040d5d72f9ca1dc622e7984.JPG'); background-size: contain; background-repeat: no-repeat; background-position: center;">
         <div class="absolute inset-0 bg-black opacity-50"></div>
         <div class="relative z-10 max-w-4xl mx-auto px-4 text-center">
@@ -245,7 +245,7 @@
                         <g transform="translate(0.000000,512.000000) scale(0.100000,-0.100000)"
                         fill="currentColor" stroke="none">
                         <path d="M3225 4914 c-431 -65 -772 -277 -1005 -623 -60 -90 -145 -271 -175
-                        -376 -225 -777 245 -1580 1030 -1763 326 -77 661 -33 966 125 389 201 658 574
+                        -376 -777 245 -1580 1030 -1763 326 -77 661 -33 966 125 389 201 658 574
                         735 1018 20 114 14 403 -11 512 -60 269 -189 507 -375 693 -153 154 -294 247
                         -488 324 -159 64 -282 87 -477 91 -93 2 -183 1 -200 -1z m440 -183 c252 -62
                         448 -174 619 -351 231 -240 346 -525 346 -858 0 -345 -122 -643 -361 -883
@@ -316,6 +316,20 @@
                     すべての商品を見る
                 </a>
             </div>
+        </div>
+    </section>
+
+    <!-- Size Chart Section (移動) -->
+    <section id="size-chart-section" class="relative w-full py-20 bg-cover bg-center" style="background-image: url('https://placehold.co/1920x600/333333/FFFFFF?text=Size+Chart+Overview');">
+        <div class="absolute inset-0 bg-black opacity-40"></div>
+        <div class="relative z-10 max-w-4xl mx-auto px-4 text-center">
+            <h2 class="text-4xl md:text-5xl font-bold mb-4 text-orange-500">Size Chart</h2>
+            <p class="text-lg md:text-xl mb-8">
+                最適なサイズを見つけるための詳細なサイズ表はこちら。
+            </p>
+            <a href="size-chart.html" class="bg-orange-500 text-white px-8 py-3 rounded-full font-semibold hover:bg-orange-600 transition duration-300 inline-block">
+                詳細を見る
+            </a>
         </div>
     </section>
 
