--- a/index.html
+++ b/index.html
@@ -74,11 +74,17 @@
                 <img src="IMG_9950.JPG" alt="BRAND LOGO" class="h-8 w-auto">
             </a>
             <div class="hidden md:flex space-x-6 text-white text-sm">
+                <!-- Product Page Link -->
                 <a href="all-product.html" class="hover:underline">Product</a>
+                <!-- Order Page Link -->
                 <a href="how-to-order.html" class="hover:underline">Order</a>
+                <!-- My Logo Page Link -->
                 <a href="logo-creation.html" class="hover:underline">My logo</a>
+                <!-- Collection Page Link -->
                 <a href="gallery.html" class="hover:underline">Collection</a>
+                <!-- Size Chart Page Link -->
                 <a href="size-chart.html" class="hover:underline">Size Chart</a>
+                <!-- Contact Section Link (on this page) -->
                 <a href="index.html#line-qr-code" class="hover:underline">Contact</a>
             </div>
             <div class="hidden md:flex space-x-4 text-white">
@@ -91,11 +97,17 @@
         </nav>
         <!-- Mobile Menu (Hidden by default) -->
         <div id="mobile-menu" class="hidden md:hidden bg-gray-900 bg-opacity-90 text-white mt-4 p-4 rounded-lg">
+            <!-- Product Page Link (Mobile) -->
             <a href="all-product.html" class="block py-2 hover:bg-gray-700 rounded">Product</a>
+            <!-- Order Page Link (Mobile) -->
             <a href="how-to-order.html" class="block py-2 hover:bg-gray-700 rounded">Order</a>
+            <!-- My Logo Page Link (Mobile) -->
             <a href="logo-creation.html" class="block py-2 hover:bg-gray-700 rounded">My logo</a>
+            <!-- Collection Page Link (Mobile) -->
             <a href="gallery.html" class="block py-2 hover:bg-gray-700 rounded">Collection</a>
+            <!-- Size Chart Page Link (Mobile) -->
             <a href="size-chart.html" class="block py-2 hover:bg-gray-700 rounded">Size Chart</a>
+            <!-- Contact Section Link (on this page - Mobile) -->
             <a href="index.html#line-qr-code" class="block py-2 hover:bg-gray-700 rounded">Contact</a>
             <hr class="my-2 border-gray-700">
             <!-- SEARCHとCARTを削除 -->
@@ -174,7 +186,7 @@
 
     <!-- HOW TO ORDER Section -->
     <section id="how-to-order" class="relative w-full py-20 bg-cover bg-center" style="background-image: url('https://placehold.co/1920x600/555555/FFFFFF?text=How+To+Order+Banner');">
-        <div class="absolute inset-0 bg-black opacity-50"></div>
+        <div class="absolute inset-0 bg-black opacity-40"></div>
         <div class="relative z-10 max-w-4xl mx-auto px-4 text-center">
             <h2 class="text-4xl md:text-5xl font-bold mb-4 text-orange-500">HOW TO ORDER</h2>
             <p class="text-lg md:text-xl mb-8">カスタムスポーツウェアの注文方法についてご案内します。</p>
