--- a/logo-creation.html
+++ b/logo-creation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ロゴ作成サービス - スタイリッシュなスポーツウェアブランド</title>
+    <title>My Logo Design - スタイリッシュなスポーツウェアブランド</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
@@ -30,18 +30,15 @@
             <!-- BRAND LOGO link to homepage -->
             <a href="index.html" class="text-white text-lg font-bold hover:opacity-80 transition-opacity duration-300">BRAND LOGO</a>
             <div class="hidden md:flex space-x-6 text-white text-sm">
-                <a href="index.html#services" class="hover:underline">サービス</a>
-                <a href="products-list.html" class="hover:underline">商品一覧</a>
-                <a href="how-to-order.html" class="hover:underline">注文方法</a>
-                <a href="#top" class="hover:underline">ロゴ作成</a> <!-- ロゴ作成ページ内でのトップに戻るリンク -->
-                <a href="production-process.html" class="hover:underline">制作プロセス</a>
-                <a href="gallery.html" class="hover:underline">ギャラリー</a>
-                <a href="size-chart.html" class="hover:underline">サイズ表</a>
-                <a href="index.html#contact" class="hover:underline">お問合せ</a>
+                <a href="all-product.html" class="hover:underline">Product</a>
+                <a href="how-to-order.html" class="hover:underline">Order</a>
+                <a href="#top" class="hover:underline">My logo</a> <!-- ロゴ作成ページ内でのトップに戻るリンク -->
+                <a href="gallery.html" class="hover:underline">Collection</a>
+                <a href="size-chart.html" class="hover:underline">Size Chart</a>
+                <a href="index.html#line-qr-code" class="hover:underline">Contact</a>
             </div>
             <div class="hidden md:flex space-x-4 text-white">
-                <a href="#" class="hover:underline text-sm">SEARCH</a>
-                <a href="#" class="hover:underline text-sm">CART (0)</a>
+                <!-- SEARCHとCARTを削除 -->
             </div>
             <!-- Mobile Menu Button -->
             <button id="mobile-menu-button" class="md:hidden text-white focus:outline-none">
@@ -50,17 +47,14 @@
         </nav>
         <!-- Mobile Menu (Hidden by default) -->
         <div id="mobile-menu" class="hidden md:hidden bg-gray-900 bg-opacity-90 text-white mt-4 p-4 rounded-lg">
-            <a href="index.html#services" class="block py-2 hover:bg-gray-700 rounded">サービス</a>
-            <a href="products-list.html" class="block py-2 hover:bg-gray-700 rounded">商品一覧</a>
-            <a href="how-to-order.html" class="block py-2 hover:bg-gray-700 rounded">注文方法</a>
-            <a href="#top" class="block py-2 hover:bg-gray-700 rounded">ロゴ作成</a>
-            <a href="production-process.html" class="block py-2 hover:bg-gray-700 rounded">制作プロセス</a>
-            <a href="gallery.html" class="block py-2 hover:bg-gray-700 rounded">ギャラリー</a>
-            <a href="size-chart.html" class="block py-2 hover:bg-gray-700 rounded">サイズ表</a>
-            <a href="index.html#contact" class="block py-2 hover:bg-gray-700 rounded">お問合せ</a>
+            <a href="all-product.html" class="block py-2 hover:bg-gray-700 rounded">Product</a>
+            <a href="how-to-order.html" class="block py-2 hover:bg-gray-700 rounded">Order</a>
+            <a href="#top" class="block py-2 hover:bg-gray-700 rounded">My logo</a>
+            <a href="gallery.html" class="block py-2 hover:bg-gray-700 rounded">Collection</a>
+            <a href="size-chart.html" class="block py-2 hover:bg-gray-700 rounded">Size Chart</a>
+            <a href="index.html#line-qr-code" class="block py-2 hover:bg-gray-700 rounded">Contact</a>
             <hr class="my-2 border-gray-700">
-            <a href="#" class="block py-2 hover:bg-gray-700 rounded">SEARCH</a>
-            <a href="#" class="block py-2 hover:bg-gray-700 rounded">CART (0)</a>
+            <!-- SEARCHとCARTを削除 -->
         </div>
     </header>
 
