--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
             height: 2rem; /* h-8 に相当 */
             width: auto;
         }
+        /* Active navigation link style */
+        .active-nav-link {
+            color: #f97316; /* orange-500 */
+            font-weight: 600; /* semi-bold */
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body class="bg-zinc-900 text-gray-100">
