--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     </section>
 
     <!-- LINE Official Account QR Code Section -->
-    <section class="py-16 bg-zinc-900">
+    <section id="line-qr-code" class="py-16 bg-zinc-900">
         <div class="max-w-3xl mx-auto px-4">
             <h2 class="text-3xl font-bold mb-4 text-gray-100">LINE公式アカウント</h2>
             <p class="text-gray-300 mb-8">お友達追加で最新情報や限定クーポンをゲット！</p>
