--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <!-- Size Chart Page Link -->
                 <a href="size-chart.html" class="hover:underline">Size Chart</a>
                 <!-- Contact Section Link (on this page) -->
-                <a href="index.html#line-qr-code" class="hover:underline">Contact</a>
+                <a href="index.html#line-qr-code" class="hover:underline contact-link">Contact</a>
             </div>
             <div class="hidden md:flex space-x-4 text-white">
                 <!-- SEARCHとCARTを削除 -->
@@ -114,7 +114,7 @@
             <!-- Size Chart Page Link (Mobile) -->
             <a href="size-chart.html" class="block py-2 hover:bg-gray-700 rounded">Size Chart</a>
             <!-- Contact Section Link (on this page - Mobile) -->
-            <a href="index.html#line-qr-code" class="block py-2 hover:bg-gray-700 rounded">Contact</a>
+            <a href="index.html#line-qr-code" class="block py-2 hover:bg-gray-700 rounded contact-link">Contact</a>
             <hr class="my-2 border-gray-700">
             <!-- SEARCHとCARTを削除 -->
         </div>
