--- a/logo-creation.html
+++ b/logo-creation.html
@@ -35,7 +35,7 @@
                 <a href="#top" class="hover:underline">My logo</a> <!-- ロゴ作成ページ内でのトップに戻るリンク -->
                 <a href="gallery.html" class="hover:underline">Collection</a>
                 <a href="size-chart.html" class="hover:underline">Size Chart</a>
-                <a href="index.html#line-qr-code" class="hover:underline">Contact</a>
+                <a href="index.html#line-qr-code" class="hover:underline contact-link">Contact</a>
             </div>
             <div class="hidden md:flex space-x-4 text-white">
                 <!-- SEARCHとCARTを削除 -->
@@ -52,7 +52,7 @@
             <a href="#top" class="block py-2 hover:bg-gray-700 rounded">My logo</a>
             <a href="gallery.html" class="block py-2 hover:bg-gray-700 rounded">Collection</a>
             <a href="size-chart.html" class="block py-2 hover:bg-gray-700 rounded">Size Chart</a>
-            <a href="index.html#line-qr-code" class="block py-2 hover:bg-gray-700 rounded">Contact</a>
+            <a href="index.html#line-qr-code" class="block py-2 hover:bg-gray-700 rounded contact-link">Contact</a>
             <hr class="my-2 border-gray-700">
             <!-- SEARCHとCARTを削除 -->
         </div>
